--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <html>
-hello
+<canvas id="cnvs" width="480" height="480">
+
+
+<script>
+cnvs = docuement.getElementById("cnvs")
+ctz = cnvs.getContext("2d")
+
+function update(){
+
+}
+
+setInterval(update, 100)
+
+</script>
+
 
 </html>
