--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 cnvs = docuement.getElementById("cnvs")
-ctz = cnvs.getContext("2d")
+ctx = cnvs.getContext("2d")
 
 function update(){
 
