--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <script>
-cnvs = docuement.getElementById("cnvs")
+cnvs = document.getElementById("cnvs")
 ctx = cnvs.getContext("2d")
 
 function update(){
