--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 header {
 	padding: 0.25em;
 	font-size: 60px;
-	font-family: monospace;
 	font-weight: 500;
 	text-align: center;
 	width: 12em;
@@ -14,31 +13,28 @@ header {
 }
 
 body {
+	margin: 0;
+	padding: 0;
 	color: white;
 	font-family: monospace;
-	margin: 0%;
-	padding: 0%;
 }
 
 #cnvs {
 	position: absolute;
 	z-index: -1;
-}
-
-#mazeCanvas {
 	display: block;
 	margin: auto;
 }
 
 table {
-	text-align: center;
-	font-size: 15px;
-	display: block;
+	display: absolute;
 	margin: auto;
 	border-collapse: collapse;
 }
 
 td {
+	text-align: center;
+	font-size: 15px;
 	border: 0.25em dotted white;
 	padding: 0.5em;
 }
@@ -59,10 +55,9 @@ img {
 </style>
 
 
-<body>
 	<canvas id="cnvs"></canvas>
 	<header>Welcome to the dead cat of the road</header>
-	
+
 	<table>
 		<tr>
 			<td>
@@ -85,10 +80,10 @@ img {
 			</td>
 		</tr>
 	</table>
-	
-</body>
+
 
 <script>
+
 cnvs = document.getElementById("mazeCanvas")
 ctx = cnvs.getContext("2d")
 cnvs.width = cnvs.height = parseInt(window.getComputedStyle(document.getElementsByTagName("img")[0]).width)
@@ -137,6 +132,7 @@ for (r = 0; r < maze.length; r++){
 }
 
 
+
 //background ball canvas
 
 cnvs = document.getElementById("cnvs")
@@ -149,12 +145,12 @@ function intialise(){
 	incr = Math.PI * 2 / 80
 	sinPointer = 0
 	madness = 5;
-	trailLength = 90;
+	trailLength = 45;
 	trail = []
 }
 intialise()
 function update(){
-	madness *= 1.001
+	madness *= 1.005
 	ball.x += ball.vx
 	ball.y += ball.vy
 	ball.vx += Math.random()*madness-0.5*madness
@@ -187,7 +183,7 @@ function update(){
 	ctx.fillText((parseInt(madness*1000)/1000).toString(), ball.x, ball.y + 3 * fontSize)
 	cnvs.style.backgroundColor = invertedSinColour
 }
-setInterval(update, 1000/30)
+setInterval(update, 1000/40)
 </script>
 
 
