--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <title>Meow :)</title>
-
+<link rel=icon href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/HomepageFavicon.png">
+	
 <style>
 header {
 	padding: 0.25em;
