--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ img {
 
 
 	<canvas id="cnvs"></canvas>
-	<header>Welcome to the dead cat of the road</header>
+	<header>Welcome</header>
 
 	<table>
 		<tr>
