--- a/index.html
+++ b/index.html
@@ -79,12 +79,21 @@ img {
 				<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/gravityPreview3d.JPG"></img>
 				<a href="https://roadkillcat.github.io/Ulti-Gravity/GravityHtml.html?100000,4,1,20,1,0,1,//G_Constant_(stength_of_gravity),no_of_balls,min_radius,max_radius,starting_velocity,merge_on_collision,tracing">play with gravity</a>
 			</td>
-			<td>
-				function t(eng){
-				words.forEach(function(o){if(o[0] == eng)document.getElementsByClassName("guess")[0].value=o[1]})
-				}
-				
-			</td>
+		</tr>
+	        <tr>
+			Nutty Tilez stuf
+			
+			function t(eng){
+			words.forEach(function(o){if(o[0] == eng)document.getElementsByClassName("guess")[0].value=o[1]})
+			}
+			
+			function updateWords(){
+			raw = document.getElementsByTagName("td")
+			words = []
+			for (i=0;i<raw.length;i+=2){
+			words.push([raw[i].innerText.slice(0,-1),raw[i+1].innerText.slice(0,-1)])
+			}}
+			
 		</tr>
 	</table>
 
