--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ img {
 			</td>
 		</tr>
 	        <tr>
+			<div>
 			Nutty Tilez stuf
 			
 			function t(eng){
@@ -93,7 +94,7 @@ img {
 			for (i=0;i<raw.length;i+=2){
 			words.push([raw[i].innerText.slice(0,-1),raw[i+1].innerText.slice(0,-1)])
 			}}
-			
+		        </div>
 		</tr>
 	</table>
 
