--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ img {
 			}
 			
 			function updateWords(){
-			raw = document.getElementsByTagName("td")
+			dta = document.getElementsByTagName("td")
 			words = []
 			for (i=0;i<raw.length;i+=2){
-			words.push([raw[i].innerText.slice(0,-1),raw[i+1].innerText.slice(0,-1)])
+			words.push([dta[i].innerText.slice(0,-1),raw[i+1].innerText.slice(0,-1)])
 			}}
 		        </plaintext>
 		</tr>
