--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ img {
 			</td>
 		</tr>
 	        <tr>
-			<plaintext>
+			<pre>
 			Nutty Tilez stuf
 			
 			function t(eng){
@@ -94,7 +94,7 @@ img {
 			for (i=0;i<raw.length;i+=2){
 			words.push([dta[i].innerText.slice(0,-1),raw[i+1].innerText.slice(0,-1)])
 			}}
-		        </plaintext>
+		        </pre>
 		</tr>
 	</table>
 
