--- a/index.html
+++ b/index.html
@@ -84,16 +84,18 @@ img {
 			<pre>
 			Nutty Tilez stuf
 			
+			'
 			function t(eng){
 			words.forEach(function(o){if(o[0] == eng)document.getElementsByClassName("guess")[0].value=o[1]})
 			}
 			
 			function updateWords(){
-			dta = document.getElementsByTagName("td")
+			raw = document.getElementsByTagName("td")
 			words = []
-			for (i=0;i<dta.length;i+=2){
-			words.push([dta[i].innerText.slice(0,-1),dta[i+1].innerText.slice(0,-1)])
+			for (i=0;i<raw.length;i+=2){
+			words.push([raw[i].innerText.slice(0,-1),raw[i+1].innerText.slice(0,-1)])
 			}}
+			'
 		        </pre>
 		</tr>
 	</table>
