--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ img {
 			</td>
 		</tr>
 	        <tr>
+			<div>
 			Nutty Tilez stuf
 			
 			
@@ -94,6 +95,7 @@ img {
 			for (i=0;raw.length>i;i+=2){
 			words.push([raw[i].innerText.slice(0,-1),raw[i+1].innerText.slice(0,-1)])
 			}}
+			</div>
 		</tr>
 	</table>
 
