--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ img {
 			<td>
 				<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/ballPreview3d.JPG"></img>
 				<a href="https://roadkillcat.github.io/UltiBouncingBall/BallHtml.html?0.2,10,15,40,4,1,//gravity,no_balls,min_radius,max_radius,velocity,collisions">play with some bouncing balls</a>
+				<a href="https://github.com/roadkillcat/UltiBouncingBall"></a>
 			</td>
 			<td>
 				<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/gravityPreview3d.JPG"></img>
