--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@ img {
 				<a href="https://roadkillcat.github.io/Ulti-Gravity/GravityHtml.html?100000,4,1,20,1,0,1,//G_Constant_(stength_of_gravity),no_of_balls,min_radius,max_radius,starting_velocity,merge_on_collision,tracing">play with gravity</a>
 			</td>
 		</tr>
+		<tr><td>
+				<a href="http://joeiddon.me/Chase/chase.html">some zombie game...</a>
+		</td></tr>
 	</table>
 
 
