--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="style.css">
 	
 	<title>Joe Iddon</title>
-	<link rel="icon" href="http://joeiddon.me/master/images/logo_teal.png"></link>
+	<link rel="icon" href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_teal.png"></link>
 </head>
 
 
