--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 	<div id="banner">
 		<div id="logo" href="http://joeiddon.me">
 			<img id="logo_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_white.png"></img>
-			<h1> JOE IDDON </h1>
+			<div id="logo_txt"> JOE IDDON </div>
 		</div>
-		
-		
 		<div id="menu">
 			<div class="nav_button" href="http://joeiddon.me">HOME</div>
 			<div class="nav_button" href="http://google.com">PROJECTS</div>			
@@ -24,6 +22,44 @@
 		</div>
 		<!-- <a href="http://google.com">HOME</a> -->
 	</div>
+	
+	<div id="main">
+		
+		<h1>Welcome to my [work in progress] website...</h1>
+		
+		<div id="main_container">
+			<p>
+			Hello and welcome to my site, here I will be posting my projects and stuf.
+			If you want to see what kind of stuf I like to code, checkout the 'about' tab above.
+			To look at a collection of my projects, select the 'projects' tab.
+			</p>
+	
+			<!--
+			For example, here is a video of some robot I made: 
+			</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/2TJPSPpu07U?mute=1" frameborder="0" allowfullscreen></iframe>
+			<p>
+			-->
+			<img id="wispa_img" src="https://lh3.googleusercontent.com/flzpdNHcXnFBGai8vGsB_Ecj_OsF5WC_ROFkTP-IX7tZQxpwB33_6wvFWyYh_JzVeqIOmpTFs7KSfO8DcFriKmQCLPdVJPKnt9iidEE8RLQTtI6bkhru-RaKriCk4BEDuPgNKobwuq_bPTPn60FAh5ZbVI6viqtrBAnRrF9l3dfOhHKjDeZWWea6rhwM1WPhu1piJ5D_Oz2chsGZZdKzxzhcaUyLYL5F4Iac40pXmizoPDywwds4_NAZOtTDFhYg3voyeIcf70v-BHCcZ5BEAiKiP6sAdgMqSZQymT0oH4fp5Mv29pommnv3SYo11ePo0YuVM7uG-dJYBp_sElfE_u1RCRbqA55x5z79DtuMyasPfOLzM6DLmGBGYteYT4kzAZ0hPpxPlE_daAYbhFMIthrf-bycgd64WkkT4i4D7OrMRQw1R9UrZW-ACbYe2gZOLkQ2vONIor6rtlXc_4zucBDZaR6P0vtDi62-jXxd1Qysjof9dNJMcxJg3aRCeY1p_Yuky-posEgpuYERacnOma8CIW55mm8OQ6fS48zvW1qC2BdX1nPabz1lyp14wI34WPonYm4Rx4uRT3bprU3-cHxuOXMbc-gTvffHvJmXnN4B0s3DsLpO143J5kvSmwN5MZoBJiE4tee_SYt5X2GqLK9L3WJWF6MtRcWGjjasQ_OGZi8=w1359-h1019-no"></img>
+			
+			
+			<p>
+			Most of my coding work is in public repositories on github...    I need to make some links to that when i can be bothered
+			</p>
+			
+			<!-- remove comment to test scroll of page
+			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+			-->
+			
+		</div>
+		
+	</div>
+	
+	
+	<div id="footer">
+		Copyright &copy 2017, <a href="http://joeiddon.me">Joe Iddon</a>. Design by moi (no animals harmed in the making...)
+	</div>
+	
 </body>
 
 <script src="script.js"></script>
