--- a/index.html
+++ b/index.html
@@ -7,27 +7,31 @@
 	<link rel="icon" href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_teal.png"></link>
 </head>
 
-
 <body>
 	<div id="banner">
 		<div id="logo" href="http://joeiddon.me">
 			<img id="logo_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_white.png"></img>
-			<div id="logo_txt"> JOE IDDON </div>
+			<div id="logo_txt">JOE IDDON</div>
 		</div>
+		
 		<div id="menu">
 			<div class="nav_button" href="http://joeiddon.me">HOME</div>
 			<div class="nav_button" href="http://google.com">PROJECTS</div>			
-			<div class="nav_button" href="http://google.com">ABOUT</div>			
-			
+			<div class="nav_button" href="http://google.com">ABOUT</div>
 		</div>
-		<!-- <a href="http://google.com">HOME</a> -->
+		
+		<div id="logos_container">
+			<img class="logo_link" href="http://github.com/roadkillcat" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/github_logo.png"></img>
+			<img class="logo_link" href="http://thingiverse.com/prusai3d" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/thingiverse_logo.png"></img>			
+		</div>
+		
 	</div>
 	
 	<div id="main">
 		
-		<h1>Welcome to my [work in progress] website...</h1>
 		
 		<div id="main_container">
+			<h1>Welcome to my [work in progress] website...</h1>
 			<p>
 			Hello and welcome to my site, here I will be posting my projects and stuf.
 			If you want to see what kind of stuf I like to code, checkout the 'about' tab above.
@@ -41,8 +45,9 @@
 			<p>
 			-->
 			<img id="wispa_img" src="https://lh3.googleusercontent.com/flzpdNHcXnFBGai8vGsB_Ecj_OsF5WC_ROFkTP-IX7tZQxpwB33_6wvFWyYh_JzVeqIOmpTFs7KSfO8DcFriKmQCLPdVJPKnt9iidEE8RLQTtI6bkhru-RaKriCk4BEDuPgNKobwuq_bPTPn60FAh5ZbVI6viqtrBAnRrF9l3dfOhHKjDeZWWea6rhwM1WPhu1piJ5D_Oz2chsGZZdKzxzhcaUyLYL5F4Iac40pXmizoPDywwds4_NAZOtTDFhYg3voyeIcf70v-BHCcZ5BEAiKiP6sAdgMqSZQymT0oH4fp5Mv29pommnv3SYo11ePo0YuVM7uG-dJYBp_sElfE_u1RCRbqA55x5z79DtuMyasPfOLzM6DLmGBGYteYT4kzAZ0hPpxPlE_daAYbhFMIthrf-bycgd64WkkT4i4D7OrMRQw1R9UrZW-ACbYe2gZOLkQ2vONIor6rtlXc_4zucBDZaR6P0vtDi62-jXxd1Qysjof9dNJMcxJg3aRCeY1p_Yuky-posEgpuYERacnOma8CIW55mm8OQ6fS48zvW1qC2BdX1nPabz1lyp14wI34WPonYm4Rx4uRT3bprU3-cHxuOXMbc-gTvffHvJmXnN4B0s3DsLpO143J5kvSmwN5MZoBJiE4tee_SYt5X2GqLK9L3WJWF6MtRcWGjjasQ_OGZi8=w1359-h1019-no"></img>
-			
-			
+			<img id="wispa_img" src="https://lh3.googleusercontent.com/flzpdNHcXnFBGai8vGsB_Ecj_OsF5WC_ROFkTP-IX7tZQxpwB33_6wvFWyYh_JzVeqIOmpTFs7KSfO8DcFriKmQCLPdVJPKnt9iidEE8RLQTtI6bkhru-RaKriCk4BEDuPgNKobwuq_bPTPn60FAh5ZbVI6viqtrBAnRrF9l3dfOhHKjDeZWWea6rhwM1WPhu1piJ5D_Oz2chsGZZdKzxzhcaUyLYL5F4Iac40pXmizoPDywwds4_NAZOtTDFhYg3voyeIcf70v-BHCcZ5BEAiKiP6sAdgMqSZQymT0oH4fp5Mv29pommnv3SYo11ePo0YuVM7uG-dJYBp_sElfE_u1RCRbqA55x5z79DtuMyasPfOLzM6DLmGBGYteYT4kzAZ0hPpxPlE_daAYbhFMIthrf-bycgd64WkkT4i4D7OrMRQw1R9UrZW-ACbYe2gZOLkQ2vONIor6rtlXc_4zucBDZaR6P0vtDi62-jXxd1Qysjof9dNJMcxJg3aRCeY1p_Yuky-posEgpuYERacnOma8CIW55mm8OQ6fS48zvW1qC2BdX1nPabz1lyp14wI34WPonYm4Rx4uRT3bprU3-cHxuOXMbc-gTvffHvJmXnN4B0s3DsLpO143J5kvSmwN5MZoBJiE4tee_SYt5X2GqLK9L3WJWF6MtRcWGjjasQ_OGZi8=w1359-h1019-no"></img>
+			<img id="wispa_img" src="https://lh3.googleusercontent.com/flzpdNHcXnFBGai8vGsB_Ecj_OsF5WC_ROFkTP-IX7tZQxpwB33_6wvFWyYh_JzVeqIOmpTFs7KSfO8DcFriKmQCLPdVJPKnt9iidEE8RLQTtI6bkhru-RaKriCk4BEDuPgNKobwuq_bPTPn60FAh5ZbVI6viqtrBAnRrF9l3dfOhHKjDeZWWea6rhwM1WPhu1piJ5D_Oz2chsGZZdKzxzhcaUyLYL5F4Iac40pXmizoPDywwds4_NAZOtTDFhYg3voyeIcf70v-BHCcZ5BEAiKiP6sAdgMqSZQymT0oH4fp5Mv29pommnv3SYo11ePo0YuVM7uG-dJYBp_sElfE_u1RCRbqA55x5z79DtuMyasPfOLzM6DLmGBGYteYT4kzAZ0hPpxPlE_daAYbhFMIthrf-bycgd64WkkT4i4D7OrMRQw1R9UrZW-ACbYe2gZOLkQ2vONIor6rtlXc_4zucBDZaR6P0vtDi62-jXxd1Qysjof9dNJMcxJg3aRCeY1p_Yuky-posEgpuYERacnOma8CIW55mm8OQ6fS48zvW1qC2BdX1nPabz1lyp14wI34WPonYm4Rx4uRT3bprU3-cHxuOXMbc-gTvffHvJmXnN4B0s3DsLpO143J5kvSmwN5MZoBJiE4tee_SYt5X2GqLK9L3WJWF6MtRcWGjjasQ_OGZi8=w1359-h1019-no"></img>
+		
 			<p>
 			Most of my coding work is in public repositories on github...    I need to make some links to that when i can be bothered
 			</p>
