--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 			<p>
 			Most of my coding work is in public repositories on github...    I need to make some links to that when i can be bothered
 			</p>
+			<p>
+			I have made the links now, for anyone following, they are up there /\
+			</p>
 			
 			<!-- remove comment to test scroll of page
 			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
