--- a/404.html
+++ b/404.html
@@ -3,5 +3,13 @@ permalink: /404.html
 ---
 
 <html>
-  <h1> you appear to be lost </h1>
+  <p>
+    you appear to have gotten lost,
+    please leave an issue
+    <a href="http://github.com/roadkillcat/roadkillcat.github.io">here</a>
+    stating where you got this link.
+    I appreciate your time. Click
+    <a href="http://roadkillcat.github.io">here</a>
+    to return to the homepage.
+  </p>
 </html>
