--- a/404.html
+++ b/404.html
@@ -19,6 +19,7 @@ permalink: /404.html
     
   </style>
   <body>
+    <h1> help ! </h1>
     <p>
       you appear to have gotten lost,
       please leave an issue
