--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@ permalink: /404.html
     <p>
       you appear to have gotten lost,
       please leave an issue
-      <a href="http://github.com/roadkillcat/roadkillcat.github.io">here</a>
+      <a href="http://github.com/roadkillcat/roadkillcat.github.io/issues">here</a>
       stating where you got this link.
       I appreciate your time. Click
       <a href="http://roadkillcat.github.io">here</a>
