--- a/404.html
+++ b/404.html
@@ -10,9 +10,12 @@ permalink: /404.html
     }
     h1 {
       font-size: 100px;
+      background-color: #00979F;
     }
     p {
       font-size: 30px;
+      max-width: 800px;
+      margin: auto;
     }
     
     
