--- a/404.html
+++ b/404.html
@@ -23,6 +23,7 @@ permalink: /404.html
   </style>
   <body>
     <h1> help ! </h1>
+    <img src="https://static.dezeen.com/uploads/2017/02/ikea-mexico-border-wall-spoof_dezeen_hero.gif"></img>
     <p>
       you appear to have gotten lost,
       please leave an issue
