--- a/404.html
+++ b/404.html
@@ -7,10 +7,14 @@ permalink: /404.html
     body {
       font-family: courier;
       text-align: center;
+      padding: 0;
     }
     h1 {
       font-size: 100px;
       background-color: #00979F;
+    }
+    img {
+      width: 500;
     }
     p {
       font-size: 30px;
