--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@ permalink: /404.html
       font-family: courier;
       text-align: center;
       padding: 0;
+      margin: 0;
     }
     h1 {
       font-size: 100px;
