--- a/404.html
+++ b/404.html
@@ -13,6 +13,8 @@ permalink: /404.html
     h1 {
       font-size: 100px;
       background-color: #00979F;
+      margin: 0;
+      padding: 0;
     }
     img {
       width: 500;
