--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 		</div>
 		
 		<div id="logos_container">
+			<img class="logo_link" href="https://stackoverflow.com/u/7434365/" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/stack_logo.png"></img>
 			<img class="logo_link" href="http://github.com/roadkillcat" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/github_logo.png"></img>
-			<img class="logo_link" href="http://thingiverse.com/prusai3d" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/thingiverse_logo.png"></img>			
+			<img class="logo_link" href="http://thingiverse.com/prusai3d" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/thingiverse_logo.png"></img>
 		</div>
 		
 	</div>
