--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		
 		
 		<div id="main_container">
+			<link rel="import" href="bob.html">
 			<h1>Welcome to my [work in progress] website...</h1>
 			<a href="http://joeiddon.me/old_site.html" style="display: block; text-align: center; font-size: 30px; font-family: courier;">
 			go to my old site which kinda works here
