--- a/projects/test.html
+++ b/projects/test.html
@@ -3,3 +3,6 @@ layout: default
 ---
 
 <h1> hello this is some content for a project </h1>
+<p>
+  this is some paragraph to test that paragraphs work para para para para graph paper lallalala does it work? I need to wrtie more so it goes over multiple lines.... And some morestuf
+</p>
