--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,6 @@ layout: default
   here I will be posting some of my projects
 </p>
 
-{% for post in site.projects %}
-  <p> {{post.url}} </p>
-{% endfor %}
+<a href="http://joeiddon.me/projects/rendering3d/">javascript 3d rendering</a>
+<a href="http://joeiddon.me/projects/bouncingBalls/">bouncing ball physics simulation</a>
+<a href="http://joeiddon.me/projects/arduinoServoArm/">arduino robot arm project</a>
