--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@ layout: default
 </p>
 
 <li>
-  <img href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/ballPreview3d.JPG">
+  <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/ballPreview3d.JPG">
   <a href="http://joeiddon.me/projects/rendering3d/">javascript 3d rendering</a>
 </li>
 <li>
