--- a/projects/arduino.html
+++ b/projects/arduino.html
@@ -4,16 +4,16 @@ layout: default
 
 <h1>ARDUINOS !!</h1>
 <p>
-Arduinos are programmably microcontrollers which are awesome... You can find out about them 
-<a href="https://www.arduino.cc/en/Guide/Introduction"> here </a>
-I have many arduinos (none of which are official ;) ) but my favourite is the
-nano v3. It is based around the ATMEL ATmega328p chip which is also found in the uno board.
-The board is really small so can be mounted on stuff easily and are extremely CHEAP. I found a seller
-on ebay offering £1.13 for them!
+Arduinos are microcontrollers that are programmed through a C based arduino language. Since they are so simple,
+there is a huge range of modules and stuff which you can integrate into stuf. You can find more out about them 
+<a href="https://www.arduino.cc/en/Guide/Introduction"> here.</a>
+The arduino which I use mainly is the nano v3. It is based around the ATMEL ATmega328p chip which is also found on the uno board.
+It has a tiny form factor for what it can do which means that it can be mounted on projects easily. In addition, they are
+extremely CHEAP - I found a seller on ebay offering £1.13 for them!
 </p>
 
 <p>
 Anyway, now you breiefly know what they are, here is some stuf I have made with them...
 </p>
 
-<p> note to self: finish this </p>
+<p> note to self: finish this ..........</p>
