--- a/projects/arduino.html
+++ b/projects/arduino.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>ARDUINOS !!</h1>
+<h1>Arduinos</h1>
 <p>
 Arduinos are microcontrollers that are programmed through a C based arduino language. Since they are so simple,
 there is a huge range of modules and stuff which you can integrate into stuf. You can find more out about them 
