--- a/projects/arduino.html
+++ b/projects/arduino.html
@@ -12,7 +12,7 @@ It has a tiny form factor for what it can do which means that it can be mounted 
 extremely CHEAP - I found a seller on ebay offering £1.13 for them!
 </p>
 
-<img href="https://store-cdn.arduino.cc/uni/catalog/product/cache/1/image/1800x/ea1ef423b933d797cfca49bc5855eef6/a/0/a000005_front.jpg"></img>
+<img src="https://store-cdn.arduino.cc/uni/catalog/product/cache/1/image/1800x/ea1ef423b933d797cfca49bc5855eef6/a/0/a000005_front.jpg"></img>
 
 
 <p>
