--- a/projects/javascript.html
+++ b/projects/javascript.html
@@ -12,7 +12,7 @@ For example one of my first things I coded in it was this prime distribution gra
 something, but not as graphical and not as cool. 
 Here it is:
 </p>
-<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/primeGraph.png"></img>
+<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/primeGraph.JPG"></img>
 
 <p>
 Itmay not seem amazing, but this example shows how javascript isnt just useful for creating websites. Just look at the code for
