--- a/projects/index.html
+++ b/projects/index.html
@@ -9,19 +9,10 @@ layout: default
 </style>
 
 
-<h1> welcome to my project page </h1>
+<h1>Projects</h1>
 
 <p>
-  here I will be posting some of my projects
+The majority of my physical projects such as my robot arms, quadropod and 3d printer involve arduinos. If you are interested in these 
+then <a href="http://joeiddon.me/projects/arduino.html">visit here</a>. Alternatively, you can take a look at some software stuf. The
+main languages I code in are <a href="https://www.python.org/">Python</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a> and <a href="http://www.openscad.org/">OpenSCAD</a>. You can see my work with these by selecting the appropriate tab above.
 </p>
-
-<li>
-  <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/ballPreview3d.JPG">
-  <a href="http://joeiddon.me/projects/rendering3d/">javascript 3d rendering</a>
-</li>
-<li>
-  <a href="http://joeiddon.me/projects/bouncingBalls/">bouncing ball physics simulation</a>
-</li>
-<li>
-  <a href="http://joeiddon.me/projects/arduinoServoArm/">arduino robot arm project</a>
-</li>
