--- a/projects/javascript/about.html
+++ b/projects/javascript/about.html
@@ -15,7 +15,7 @@ Here it is:
 <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/primeGraph.JPG"></img>
 
 <p>
-Itmay not seem amazing, but this example shows how javascript isnt just useful for creating websites. Just look at the code for
+It may not seem amazing, but this example shows how javascript isnt just useful for creating websites. Just look at the code for
 the prime calculations:
 
 <pre>
@@ -39,7 +39,7 @@ function primeSieve(limit){
 }
 </pre>
 
-The code is almost idential to the same function written in python: 
+The function is near idential to the same function written in python: 
 
 <pre>
 def primeSieve(limit):
@@ -54,12 +54,11 @@ def primeSieve(limit):
 	return primes
 </pre>
 
-But why you ask? Well this is just one aplication of javascripts functionality. It out performed the near idential python code here
-time-wise and it allowed for a nice graphical representation...
+In this example of calculating primes, it can be seen that javascript performs well and this demonstrates some of its usage outside of web devolplment. In addition, it may come as a surprise that here the javascript function is more efficent at calculating the primes than the python one (i.e computes in less time). This goes to show how it is a great tool and, as you can see in my projects where I have used it, can be extremely powerful for visualising things.
 </p>
 
 <p>
-That was just one of my javascript workds, below are a couple more
+To have at look at the things I have made, click <a href="http://joeiddon.me/projects/javascript">here</a>.
 </p>
 
 <p>
