--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -4,6 +4,9 @@ layout: default
 
 <h1>Javascript</h1>
 
+<p>Below is a collection of my projects coded in javascript. If you want to read a post on what I mainly use javascript for, checkout this <a href="http://joeiddon.me/projects/javascript/about.html">about page</a> I wrote.</p>
+
+
 <table>
 	
 	
