--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -4,6 +4,9 @@ layout: default
 
 <h1> Arduinos </h1>
 
+<p> Welcome to my arduino-based projects. If you want to read a little bit about arduinos, visit the <a href="http://joeiddon.me/proejects/arduino/about.html">about page</a> that I made on them. Otherwise, click on any of the projects below to see what theyre about... </p>
+
+
 <table>
   <tr>
     <td>
