--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -11,13 +11,13 @@ layout: default
   <tr>
     <td>
       <a href="http://joeiddon.me/projects/arduino/sildeRobotArm.html">
-      <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
     
     <td>
       <a href="http://joeiddon.me/projects/arduino/sildeRobotArm.html">
-      <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
   </tr>
@@ -25,13 +25,13 @@ layout: default
   <tr>
     <td>
       <a href="http://joeiddon.me/projects/arduino/sildeRobotArm.html">
-      <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
     
     <td>
       <a href="http://joeiddon.me/projects/arduino/sildeRobotArm.html">
-      <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
   </tr>
